--- a/encyclopedia.org
+++ b/encyclopedia.org
@@ -1,7 +1,10 @@
 #+title: 百科知识
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
 
 * 百科理工
 ** GPS
