--- a/hardware.org
+++ b/hardware.org
@@ -1,7 +1,10 @@
-#+title: 硬件 
+#+title: 硬件
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
 
 * 数字电路
 ** 电平转换
