--- a/index.org
+++ b/index.org
@@ -1,7 +1,13 @@
 #+title: 比克曼的知识管理
+#+subtitle: 主页
 #+author: 比克曼
-#+latex_class: org-latex-pdf
-#+latex: \newpage
+#+latex_class: org-latex-pdf 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
+
+
   
 * [[./math.org][数学]]
 汇总工作中需要用到数学知识。
