--- a/math.org
+++ b/math.org
@@ -1,7 +1,10 @@
-#+title: 数学 
+#+title: 数学
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
 
 * 代数
 ** 概念
