--- a/protocol.org
+++ b/protocol.org
@@ -1,7 +1,10 @@
-#+title: 协议 
+#+title: 协议
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
 
 * 大族协议
 ** bt
