--- a/signal.org
+++ b/signal.org
@@ -1,7 +1,10 @@
 #+title: 信号与系统
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+toc: tables 
+#+latex: \clearpage\pagenumbering{arabic} 
+#+options: h:4 
+#+startup: overview
 
 * 基本概念
 ** 频率
