--- a/software.org
+++ b/software.org
@@ -6,45 +6,74 @@
 #+options: h:4 
 #+startup: overview
 
-* 语言
+* 编程语言
 ** C语言
-*** 宏定义特殊用法
+*** 宏操作
 - 从注释来看是把x转换成字符串。
-#+begin_src c
-	/*
-	 * Macros to transform values
-	 * into environment strings.
-	 */
-	#define XMK_STR(x)    #x
-	#define MK_STR(x)    XMK_STR(x)
-#+end_src
-找到了相关的资料，解读了这个define，还顺便认识了另外两个不常用的define
-#+begin_src c
-	#define Conn(x,y) x##y
-	#define ToChar(x) #@x
-	#define ToString(x) #x
-#+end_src
-x##y表示什么？表示x连接y，举例说：
-#+begin_src c
+  #+begin_src c
+    /*
+     ,* Macros to transform values
+     ,* into environment strings.
+     ,*/
+    #define XMK_STR(x)  #x
+    #define MK_STR(x)   XMK_STR(x)
+  #+end_src
+
+  找到了相关的资料，解读了这个define，还顺便认识了另外两个不常用的
+  define
+  #+begin_src c
+    #define Conn(x,y) x##y
+    #define ToChar(x) #@x
+    #define ToString(x) #x
+  #+end_src
+
+  x##y表示什么？表示x连接y，举例说：
+  #+begin_src c
     int  n = Conn(123,456);  //结果就是n=123456;
     char* str = Conn("asdf", "adf")//结果就是 str = "asdfadf";
-#+end_src
-再来看#@x，其实就是给x加上单引号，结果返回是一个const char。举例说：char a = ToChar(1);结果就是a='1';做个越界试验char a
-= ToChar(123);结果是a='3'; 但是如果你的参数超过四个字符，编译器就给给你报错了！error C2015: too many characters in
-constant; 最后看看#x,估计你也明白了，他是给x加双引号
-#+begin_src c
+  #+end_src
+
+  再来看#@x，其实就是给x加上单引号，结果返回是一个const char。举例说：
+  char a = ToChar(1);结果就是a='1';做个越界试验char a=ToChar(123);结
+  果是a='3'; 但是如果你的参数超过四个字符，编译器就给给你报错了！
+  error C2015: too many characters in constant; 最后看看#x,估计你也明
+  白了，他是给x加双引号
+  #+begin_src c
     char* str = ToString(123132);//就成了str="123132";
-#+end_src
+  #+end_src
 - 宏调试接口
-#+begin_src c
-#pragma diag_suppress 174 //抑制警告
-#ifdef DEBUG
-#define printfdbg printf
-#else
-#define printfdbg /\
-/printfdbg 
-#endif
-#+end_src
+  #+begin_src c
+    #pragma diag_suppress 174 //抑制警告
+    #ifdef DEBUG
+    #define printfdbg printf
+    #else
+    #define printfdbg /                             \
+        /printfdbg 
+    #endif
+  #+end_src
+- 可变参宏函数
+  #+BEGIN_SRC c 
+    //可变参宏函数定义
+    #define HAL_FUN(FUN_NAME, ...)   \
+        FUN_NAME(__VA_ARGS__);
+    //1参数函数定义
+    void funTest1(int a)
+    {
+        printf ("a:%d\n", a);
+    }
+    //2参数函数定义
+    void funTest1(int a, int b)
+    {
+        printf ("sum:%d\n", a+b);
+    }
+    //调用实例
+    int main(int argc, char* argv[])
+    {
+        HAL_FUN(funTest1, 2);
+        HAL_FUN(funTest1, 1, 3);
+        return 0;
+    }
+  #+END_SRC
 *** 位操作
 - 将最右侧0改为1：
   #+begin_src c
@@ -132,39 +161,39 @@ constant; 最后看看#x,估计你也明白了，他是给x加双引号
 *** 嵌入式
 - printf调试：可以如下步骤
   #+begin_src c
-  #include "uart.h"//串口发送单个字符的API
-  #include "stdio.h"//里面有FILE结构体声明
-  #pragma import(__use_no_semihosting_swi)//半主机模式
-  struct __FILE//stdio.h里面的FILE结构体声明需要
-  {
-    int handle;
-  };
-  FILE __stdout, __stderr;//选用，如果需要分别输出
+    #include "uart.h"//串口发送单个字符的API
+    #include "stdio.h"//里面有FILE结构体声明
+    #pragma import(__use_no_semihosting_swi)//半主机模式
+    struct __FILE//stdio.h里面的FILE结构体声明需要
+    {
+      int handle;
+    };
+    FILE __stdout, __stderr;//选用，如果需要分别输出
 
-  int fputc(int ch, FILE *f)//printf最终调用的接口
-  {
-    uart_put((unsigned char)ch);
-    return ch;
-  }
+    int fputc(int ch, FILE* f)//printf最终调用的接口
+    {
+      uart_put((unsigned char)ch);
+      return ch;
+    }
   #+end_src  
 ** JAVA语言
 ** PYTHON语言
 *** base
 - 字符串转换为变量。
   #+begin_src python
-  var = "This is a string"
-  varName = 'var'
-  s= locals()[varName]
-  s2=vars()[varName]
-  print(s)
-  print(s2)
-  print(eval(varName))
+    var = "This is a string"
+    varName = 'var'
+    s= locals()[varName]
+    s2=vars()[varName]
+    print(s)
+    print(s2)
+    print(eval(varName))
   #+end_src 
 - 添加个人库: 比如当前工作路径下有./lib/File/filecsv.py , 然后就可以直接使
   用filecsv里面的函数了。
   #+begin_src python
-  sys.path.append('./lib')
-  from File.file_csv import *
+    sys.path.append('./lib')
+    from File.file_csv import *
   #+end_src
 - 重新载入模块：比如重新加载filecsv.py。
   1. 导入sys，imp库，import sys，imp
@@ -172,17 +201,21 @@ constant; 最后看看#x,估计你也明白了，他是给x加双引号
   3. 找到filecsv库的字符
   4. 重新导入模块，imp.reload(sys.modules['filecsv'])
 *** numpy
-- array矩阵的max和min静态属性：比如array矩阵data=array([[1, 5, 3], [8, 6, 1], [9, 0, 4], [4, 6, 5]]), data.min(0) 和
-  data.max(0)是从每列中获取的min和max，组成一个向量，data.min(1) 和data.max(1)是从每行中获得min和max；
-- 指数e：numpy.exp()可以表示，但是是函数，math.exp()也是，scipy.exp()也是，
-  numpy.e和math.e和scipy.e则是一个float型量了。
-- 复数：可以表示成1+3j，3和j之间不能相隔，3必须为实数不能是符号，j必须在3之
-  后，也可以使用numpy.complex(1, 3)构成1+3j, 同理也就可以构成
-  numpy.complex(1, numpy.pi)即\(e^{1+pi j}\)，复数的角度用numpy.angle()计算
+- array矩阵的max和min静态属性：比如array矩阵data=array([[1, 5, 3],
+  [8, 6, 1], [9, 0, 4], [4, 6, 5]]), data.min(0) 和data.max(0)是从每
+  列中获取的min和max，组成一个向量，data.min(1) 和data.max(1)是从每行
+  中获得min和max； 
+- 指数e：numpy.exp()可以表示，但是是函数，math.exp()也是，scipy.exp()
+  也是，numpy.e和math.e和scipy.e则是一个float型量了。 
+- 复数：可以表示成1+3j，3和j之间不能相隔，3必须为实数不能是符号，j必
+  须在3之后，也可以使用numpy.complex(1, 3)构成1+3j, 同理也就可以构成
+  numpy.complex(1, numpy.pi)即\(e^{1+pi j}\)，复数的角度用
+  numpy.angle()计算 
 *** matplotlib
 此包注意用于画图
 **** 画XY轴离散点图
-1. 先获得x,y的取值范围，比如x=numpy.arange(0, 10), y=numpy.arange(3, 10), 其个数要一致；
+1. 先获得x,y的取值范围，比如x=numpy.arange(0, 10), y=numpy.arange(3,
+   10), 其个数要一致； 
 2. 倒入画图包：import matplotlib.pyplot as plt；
 3. 开始画图：plt.plot(x, y, 'o-'), 第3个参数用于对点进行标注；
 4. 设置标题：plt.title('x, y test')
