--- a/os.org
+++ b/os.org
@@ -6,8 +6,7 @@
 #+options: h:4 
 #+startup: overview
 
-
-* 基本概念
+* brief
 ** 进程
 一个进程代表一个任务，多进程也就是多任务，一个进程包含运行所需的资源，包含
 运行代码，内存空间，栈空间，外设资源等。在Windows中一个应用程序就是一个进程。
