--- a/sitemap.org
+++ b/sitemap.org
@@ -1,15 +1,15 @@
 #+TITLE: Sitemap
 
-- [[file:index.org][姣斿厠鏇肩殑鐭ヨ瘑绠＄悊]]
-- [[file:os.org][鎿嶄綔绯荤粺]]
-- [[file:software.org][杞欢]]
-- [[file:tool.org][宸ュ叿]]
-- [[file:signal.org][淇″彿涓庣郴缁焆]
-- [[file:protocol.org][鍗忚]]
-- [[file:math.org][鏁板]]
-- [[file:language.org][澶栬瀛︿範]]
-- [[file:hardware.org][纭欢]]
-- [[file:encyclopedia.org][鐧剧鐭ヨ瘑]]
-- [[file:decoration.org][瑁呬慨鏃ヨ]]
-- [[file:communication.org][閫氫俊]]
-- [[file:algorithm.org][绠楁硶]]
+- [[file:tool.org][工具]]
+- [[file:index.org][比克曼的知识管理]]
+- [[file:os.org][操作系统]]
+- [[file:software.org][软件]]
+- [[file:signal.org][信号与系统]]
+- [[file:protocol.org][协议]]
+- [[file:math.org][数学]]
+- [[file:language.org][外语学习]]
+- [[file:hardware.org][硬件]]
+- [[file:encyclopedia.org][百科知识]]
+- [[file:decoration.org][装修日记]]
+- [[file:communication.org][通信]]
+- [[file:algorithm.org][算法]]
