--- a/tool.org
+++ b/tool.org
@@ -30,6 +30,12 @@
 - 自动安装插件：M-x package-list-packages获取插件包列表，enter进入选中插件，
   点击install开始安装；
 - 重新加载配置文件(pymacs)：M-x load-library RET pymacs RET
+- emacs配置即时生效: 不重启Emacs让新修改的配置内容生效
+  + M-x eval-last-sexp 使当前 elisp 配置中光标前的那一条语句立刻生效；
+  + M-x eval-region 使当前 elisp 配置中选中的 region 中的语句立刻生效；
+  + M-x eval-buffer 使当前的 buffer 中的设置语句立刻生效；
+  + M-x load-file ~/.emacs 载入 .emacs 文件，从而使其中的设置生效，要
+    生效其它 elisp 文件只需要把 .emacs 文件名换成其它的即可。  
 ** 基本操作
 *** 按键命令
 - 按键自定义方式
