增加安全板块

--- a/sitemap.org
+++ b/sitemap.org
@@ -1,5 +1,6 @@
 #+TITLE: Sitemap
 
+- [[file:security.org][安全]]
 - [[file:index.org][比克曼的知识管理]]
 - [[file:tool.org][工具]]
 - [[file:software.org][软件]]
