--- a/index.org
+++ b/index.org
@@ -25,6 +25,8 @@
 总结工作中用到的操作系统，Android、Linux、嵌入式操作系统等。
 * [[./communication.org][通信]]
 总结通信系统的方方面面，从基础到LTE。
+* [[./security.org][安全]]
+总结安全行业相关概念和心得。
 * [[./encyclopedia.org][百科知识]]             :noexport:
 总结工作中接触到的百科知识比如GPS等。
 * [[./language.org][外语]]               :noexport:
